# rust-demo

./: .gitignore  Cargo.toml  function  match  ownership  slice  struct  test.txt  variable
hello_macro_derive/src/: lib.rs
src/: function.rs  lib.rs  main.rs  match.rs  ownership.rs  slice.rs  struct.rs  variable.rs
src/demo/: error_r.rs  function.rs  hashmap.rs  hello_world.rs  match_r.rs  mod.rs  ownership.rs  ownership_2.rs  slice.rs  struct_1.rs  struct_r.rs  variable.rs  vector_1.rs  vector_2.rs
