[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "utils"        # 在代码中通过 `mylib::xxx` 调用
crate-type = ["rlib"] # 默认类型（通常无需修改）

[dependencies]
rand = "0.8.3"
lazy_static = "*"
hello_macro_derive = { path = "./hello_macro_derive" }
futures = "0.3"


[profile.dev]
incremental = true      # 确保启用增量
codegen-units = 16      # 增加并行编译单元
debug = 0               # 最小化调试信息
overflow-checks = false
